--- a/chunks/blocks/menu.html
+++ b/chunks/blocks/menu.html
@@ -1,8 +1,10 @@
 <div class="menu">
     <div class="menu__burger js-menu-burger">
-        <svg>
-            <use xlink:href="/assets/svg/sprite.svg#menu_burger"></use>
-        </svg>
+    <div class="menu__burger_sym">
+        ---<br>
+        ---<br>
+        ---
+    </div>
     </div>
     <div class="menu__panel js-menu-panel">
         <div class="menu__panel_cross js-menu-cross">
