--- a/chunks/html/header.html
+++ b/chunks/html/header.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="/assets/css/style.css?v=@@prodVer">
 
-    <title>@@title | SHEPEL.NET //
+    <title>@@title // BLOG.SHEPEL.NET //
     </title>
     <meta name="description" content="@@description" />
 </head>
