--- a/chunks/blocks/menu.html
+++ b/chunks/blocks/menu.html
@@ -17,7 +17,7 @@
                 <a href="/">Главная</a>
             </div>
             <div class="menu__panel_item">
-                <a href="/wiki/">Wiki</a>
+                <a href="/test/">test</a>
             </div>
         </div>
     </div>
