--- a/chunks/html/footer.html
+++ b/chunks/html/footer.html
@@ -1,4 +1,6 @@
+<script src="/assets/module/jquery/jquery-3.6.0.min.js?v=@@prodVer"></script>
 <script src="/assets/js/script.js?v=@@prodVer"></script>
+
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -16,6 +18,6 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/91115517" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
-</body>
 
+</body>
 </html>
